[ Feat ] 알고리즘 테스트 인터페이스 구조 변경